src/styles.css
body {
  font-family: "Poppins", sans-serif;
  background-color: rgb(35, 35, 61);
}
.container {
  max-width: 1400px;
  margin: 0 auto;
}

.grid {
  display: grid;
  grid-gap: 64px;
}

.img-responsive {
  width: 100%;
  display: block;
}

.card-header img {
  aspect-ratio: 1/1;
}

.embed {
  width: 100%;
  aspect-ratio: 1/1;
}

.grid-2-col {
  grid-template-columns: 1fr 1fr;
}

.grid-3-col {
  grid-template-columns: 1fr 1fr 1fr;
}

.grid-3-col-uneven {
  grid-template-columns: 1fr 2fr 2fr;
}

.card {
  background: white;
  margin: 30px;
}

.card-header.grid {
  grid-gap: 0;
}

.card-body {
  padding: 30px;
}

.card-footer {
  padding: 0 30px 30px;
}

.btn {
  display: block;
  color: white;
  background-color: rgba(35, 35, 61);
  font-weight: 700;
  font-size: 14px;
  line-height: 21px;
  text-align: center;
  letter-spacing: 3px;
  text-transform: uppercase;
  padding: 16px;
  text-decoration: none;
}

section {
  max-width: 100%;
  margin: 0 auto;
  padding: 100px;
}

section.secondary {
  background: rgb(238, 240, 255);
}

header {
  background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.6)),
    url("../images/dublin.jpg");
  background-repeat: no-repeat;
  background-size: cover;
  color: white;
  text-align: center;
  padding: 260px 0;
}

header h1 {
  font-weight: 700;
  font-size: 96px;
  line-height: 1.5x;
  text-align: center;
  margin: 30px 0;
}

header h2 {
  font-weight: 400;
  font-size: 40px;
  line-height: 1.5;
  margin: 0;
}

header h3 {
  font-weight: 900;
  font-size: 14px;
  line-height: 1.5;
  letter-spacing: 5px;
  margin: 0;
}

header a {
  font-weight: 700;
  font-size: 14px;
  line-height: 1.5;
  text-align: center;
  color: rgb(35, 35, 61);
  padding: 16px 32px;
  margin-top: 32px;
  display: inline-block;
  letter-spacing: 3px;
  text-transform: uppercase;
  text-decoration: none;
  background: white;
}

main {
  background-color: white;
}

main h2 {
  font-weight: 700;
  font-size: 16px;
  line-height: 1.5;
  letter-spacing: 5px;
  color: rgba(35, 35, 61);
  opacity: 0.3;
  text-transform: uppercase;
  margin: 0;
}

main h3 {
  font-weight: 700;
  font-size: 38px;
  line-height: 1.5;
  margin: 0;
}

main h4 {
  font-weight: 700;
  font-size: 24px;
  line-height: 1.5px;
  color: rgb(35, 35, 61);
  margin: 0;
}

main h5 {
  font-weight: 700;
  font-size: 13px;
  line-height: 1.5px;
  color: rgb(35, 35, 61);
  margin: 0;
}

main p {
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
  color: rgba(35, 35, 61);
  opacity: 0.7;
}

footer {
  color: white;
  background-image: linear-gradient(
      rgba(35, 35, 61, 0.6),
      rgba(35, 35, 61, 0.8)
    ),
    url("../images/dublinbg.jpg");
  background-repeat: no-repeat;
  background-size: cover;
}

footer h3 {
  font-weight: 700;
  font-size: 20px;
  line-height: 30px;
}
footer p {
  font-weight: 400;
  font-size: 16px;
  opacity: 0.7;
  line-height: 24px;
}

footer ul {
  padding: 0;
}

footer li {
  list-style: none;
  margin: 0;
  padding: 0;
}

footer a {
  color: white;
  opacity: 0.7;
}

@media (max-width: 900px) {
  header {
    padding: 60px 0;
  }
  header h1 {
    font-size: 48px;
  }
  header h2 {
    font-size: 20px;
  }
  header h3 {
    font-size: 12px;
  }
  .grid {
    grid-template-columns: 1fr;
    grid-gap: 32px;
  }
  section {
    padding: 30px;
  }

  .card-header img {
    display: none;
  }

  .embed {
    aspect-ratio: 16/9;
  }
  footer h2 {
    font-size: 10px;
  }
}

